--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -14,10 +14,10 @@ spec:
     spec:
       containers:
       - name: my-node-app
-        image: akdevopscoaching/python-app123
+        image: hypham3012/node-app
         imagePullPolicy: Always
         ports:
-        - containerPort: 5000
+        - containerPort: 3000
 # service type loadbalancer       
 ---
 apiVersion: v1
@@ -29,6 +29,6 @@ spec:
     app: node-app
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 5000
+      port: 3000
+      targetPort: 3000
   type: LoadBalancer
